Adding google analytics

--- a/Assets/WebGLTemplates/GithubPagesTemplate/index.html
+++ b/Assets/WebGLTemplates/GithubPagesTemplate/index.html
@@ -1158,6 +1158,14 @@ html[subframe] body {
 </style>
 </head>
 <body id="t" i18n-values=".style.fontFamily:fontfamily;.style.fontSize:fontsize" jstcache="0" class="offline" style="font-family: &quot;Helvetica Neue&quot;, &quot;Lucida Grande&quot;, sans-serif; font-size: 75%;">
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-66065000-2', 'auto');
+  </script>
   <div id="main-frame-error" class="interstitial-wrapper" jstcache="0">
     <div id="main-content" jstcache="0">
       <div class="icon icon-offline" jseval="updateIconClass(this.classList, iconClass)" jstcache="1" style="visibility: hidden;"></div>
@@ -1170,7 +1178,7 @@ html[subframe] body {
             <li jsselect="suggestionsSummaryList" jsvalues=".innerHTML:summary" jstcache="15" jsinstance="0">Using the up and down keys.</li><li jsselect="suggestionsSummaryList" jsvalues=".innerHTML:summary" jstcache="15" jsinstance="1">Dodging everything.</li><li jsselect="suggestionsSummaryList" jsvalues=".innerHTML:summary" jstcache="15" jsinstance="*2"><a href="http://github.com/saiichihashimoto/dinosaur-game" id="diagnose-link" jstcache="0">Browsing the github repository.</a></li>
           </ul>
         </div>
-        <div class="error-code" jscontent="errorCode" jstcache="7">ERR_INTERNET_DISCONNECTED</div>
+        <div class="error-code" jscontent="errorCode" jstcache="7">ERR_DINOSAUR_RUNNING</div>
         <div id="diagnose-frame" class="hidden" jstcache="0"></div>
       </div>
     </div>
