--- a/Assets/WebGLTemplates/GithubPagesTemplate/index.html
+++ b/Assets/WebGLTemplates/GithubPagesTemplate/index.html
@@ -18,7 +18,20 @@
   <meta name="msapplication-TileColor" content="#f7f7f7">
   <meta name="msapplication-TileImage" content="./ms-icon-144x144.png">
   <meta name="theme-color" content="#f7f7f7">
-  <title i18n-content="title">%UNITY_WEB_NAME%</title>
+
+  <meta property="og:url"          content="http://saiichihashimoto.com/dinosaur-game/" />
+  <meta property="og:type"         content="website" />
+  <meta property="og:image"        content="https://camo.githubusercontent.com/cd0d4b8877280858d9bd15bca3e50202f3a20c8b/68747470733a2f2f692e7974696d672e636f6d2f76692f6578424e42356e6a634e412f6d617872657364656661756c742e6a7067" />
+  <meta property="og:title"        content="Chrome's Dinosaur Game in Unity3d" />
+  <meta property="og:description"  content="I wanted to learn how to use Unity3d so I remade Chrome's Dinosaur Game." />
+  <meta name="twitter:card"        content="summary_large_image" />
+  <meta name="twitter:site"        content="@saiichihashi">
+  <meta name="twitter:creator"     content="@saiichihashi">
+  <meta name="twitter:title"       content="Chrome's Dinosaur Game in Unity3d" />
+  <meta name="twitter:description" content="I wanted to learn how to use Unity3d so I remade Chrome's Dinosaur Game." />
+  <meta name="twitter:image"       content="https://camo.githubusercontent.com/cd0d4b8877280858d9bd15bca3e50202f3a20c8b/68747470733a2f2f692e7974696d672e636f6d2f76692f6578424e42356e6a634e412f6d617872657364656661756c742e6a7067" />
+
+  <title i18n-content="title">Chrome's Dinosaur Game in Unity3d</title>
   <style>/* Copyright 2014 The Chromium Authors. All rights reserved.
    Use of this source code is governed by a BSD-style license that can be
    found in the LICENSE file. */
