Clearing caches for screenshot

--- a/Assets/WebGLTemplates/GithubPagesTemplate/index.html
+++ b/Assets/WebGLTemplates/GithubPagesTemplate/index.html
@@ -21,7 +21,7 @@
 
   <meta property="og:url"          content="http://saiichihashimoto.com/dinosaur-game/" />
   <meta property="og:type"         content="website" />
-  <meta property="og:image"        content="http://saiichihashimoto.com/dinosaur-game/screenshot.png" />
+  <meta property="og:image"        content="http://saiichihashimoto.com/dinosaur-game/screenshot.png?4362984378" />
   <meta property="og:title"        content="Chrome's Dinosaur Game in Unity3d" />
   <meta property="og:description"  content="I wanted to learn how to use Unity3d so I remade Chrome's Dinosaur Game." />
   <meta name="twitter:card"        content="summary_large_image" />
@@ -29,7 +29,7 @@
   <meta name="twitter:creator"     content="@saiichihashi">
   <meta name="twitter:title"       content="Chrome's Dinosaur Game in Unity3d" />
   <meta name="twitter:description" content="I wanted to learn how to use Unity3d so I remade Chrome's Dinosaur Game." />
-  <meta name="twitter:image"       content="http://saiichihashimoto.com/dinosaur-game/screenshot.png" />
+  <meta name="twitter:image"       content="http://saiichihashimoto.com/dinosaur-game/screenshot.png?4362984378" />
 
   <title i18n-content="title">Chrome's Dinosaur Game in Unity3d</title>
   <style>/* Copyright 2014 The Chromium Authors. All rights reserved.
