Better WebGL border

--- a/Assets/WebGLTemplates/GithubPagesTemplate/index.html
+++ b/Assets/WebGLTemplates/GithubPagesTemplate/index.html
@@ -1052,6 +1052,7 @@ html[subframe] body {
 }
 
 .offline .runner-container {
+  border: 1px solid #585858;
   height: %UNITY_HEIGHT%px;
   max-width: %UNITY_WIDTH%px;
   overflow: hidden;
