--- a/index.html
+++ b/index.html
@@ -1052,6 +1052,7 @@ html[subframe] body {
 }
 
 .offline .runner-container {
+  border: 1px solid #585858;
   height: 150px;
   max-width: 600px;
   overflow: hidden;
