--- a/index.html
+++ b/index.html
@@ -1179,6 +1179,7 @@ html[subframe] body {
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-66065000-2', 'auto');
+    ga('send', 'pageview');
   </script>
   <div id="main-frame-error" class="interstitial-wrapper" jstcache="0">
     <div id="main-content" jstcache="0">
